# SoulDesk

./: .gitignore  README.md  companion-ai-design.md
.souldesk/: data.db-shm  data.db-wal  settings.json
.souldesk/roles/ashin/: SKILL.md  deep_mode.md  identity.md  personality.md  question_routing.md  speaking_style.md
.souldesk/roles/xianna/: SKILL.md  personality.md  relationships.md  speaking_style.md  world_setting.md
companion-ai/: index.html  package-lock.json  package.json  vite.config.ts
companion-ai/skills/ashin-perspective/: SKILL.md
companion-ai/src/: App.tsx
companion-ai/src-tauri/: Cargo.toml  tauri.conf.json
companion-ai/src-tauri/src/: lib.rs  main.rs
companion-ai/src-tauri/src/ai/: factory.rs  mod.rs  openai.rs
companion-ai/src-tauri/src/commands/: chat.rs  mod.rs  role.rs  settings.rs  skill.rs  window.rs
companion-ai/src-tauri/src/db/: mod.rs  schema.sql
companion-ai/src-tauri/src/skill/: mod.rs  parser.rs
companion-ai/src/services/: agentClient.ts  tauriBridge.ts  theme.ts
companion-ai/src/stores/: chatStore.ts
companion-ai/src/styles/: global.css
companion-ai/src/types/: index.ts
docs/plans/: 2026-06-16-companion-ai-phase1.md
docs/superpowers/plans/: 2026-06-17-souldesk-implementation.md
docs/superpowers/specs/: 2026-06-17-souldesk-agent-design.md
soul-agent/: package-lock.json  package.json
soul-agent/src/: index.ts
soul-agent/src/agent/: engine.ts
soul-agent/src/api/: server.ts
soul-agent/src/db/: database.ts
soul-agent/src/memory/: manager.ts
soul-agent/src/role/: learner.ts  loader.ts  prompt.ts
(+15 files in other folders)
