[package]
name = "companion-ai"
version = "0.1.0"
description = "Desktop Companion AI"
authors = ["you"]
edition = "2021"

[lib]
name = "companion_ai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
async-trait = "0.1"
futures = "0.3"
